Fix bad widget wrapping

--- a/sonar-server/src/main/less/dashboard.less
+++ b/sonar-server/src/main/less/dashboard.less
@@ -92,13 +92,13 @@
 }
 
 #dashboard .widget_def {
+  display: inline-block;
+  vertical-align: top;
   border: 1px solid #FFD324;
   padding: 5px;
   margin: 3px;
   white-space: normal;
-  vertical-align: top;
   width: 250px;
-  float: left;
   min-height: 100px;
 }
 
